syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "Fretes";
option objc_class_prefix = "HLW";

package br.com.zup;

service FretesService {
  rpc send (FretesRequest) returns (FretesReply) {}

  rpc calculaFrete(CalculoFreteRequest) returns (CalculoFreteResponse){}
}

message ErrorDetails{
  int32 code = 1;
  string message = 2;
}

message CalculoFreteRequest{
  string cep = 1;
}

message CalculoFreteResponse{
  string cep = 1;
  double valor = 2;
}

message FretesRequest {
  string name = 1;
}

message FretesReply {
  string message = 1;
}